--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  MAVEN-OPTS: -Dmaven.repo.local=.m2/repository
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
 image: maven:latest
 
