--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,19 +4,63 @@ spring:
 
 first-spring:
 
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
+  endpoint:
+    health:
+      probes:
+        enabled: true
+      show-details: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+    info:
+      enabled: true
+  metrics:
+    tags:
+      application: FirstSpring
+      service: VS
+      region: Hungary
+    enable:
+      jvm: true
+    prometheus:
+      metrics:
+        export:
+          enabled: true
+
 ---
 spring:
   profiles:
     active: develop
+  h2:
+    console:
+      enabled: true
+      path: /h2
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:hsqldb:mem:db/mp;hsqldb.log_data=true
+    url: jdbc:h2:mem:db
     password:
     username: sa
   jpa:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
+    generate-ddl: true
+    database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
+    properties:
+      hibernate:
+        format_sql: true
+  sql:
+    init:
+      data-locations: classpath:data.sql
+      mode: always
+
 
 ---
 spring:
